add_library(orc-core SHARED
    # Phase 1: Foundations
    field_id.cpp
    video_field_representation.cpp
    artifact.cpp
    dag_executor.cpp
    dag_field_renderer.cpp
    preview_renderer.cpp
    preview_view_registry.cpp
    preview_helpers.cpp
    colour_preview_conversion.cpp
    
    # Observation system
    observation_context.cpp
    observer_config.cpp
    pipeline_validator.cpp
    
    # Logging
    logging.cpp

    # Abstract factories
    factories.cpp

    # TBC file I/O
    tbc_reader.cpp
    tbc_source_internal/tbc_audio_efm_handler.cpp
    tbc_video_field_representation.cpp
    tbc_yc_video_field_representation.cpp
    
    # VBI utilities
    vbi_utilities.cpp
    vbi_decoder.cpp
    
    # EIA-608 decoder for closed captions
    eia608_decoder.cpp
    
    # Observers (organized in subdirectory)
    observers/observer.cpp
    observers/biphase_observer.cpp
    observers/closed_caption_observer.cpp
    observers/fm_code_observer.cpp
    observers/white_flag_observer.cpp
    observers/burst_level_observer.cpp
    observers/white_snr_observer.cpp
    observers/black_psnr_observer.cpp
    observers/field_quality_observer.cpp
    
    # Analysis framework
    analysis/analysis_registry.cpp
    analysis/analysis_init.cpp
    
    # Vectorscope analysis
    analysis/vectorscope/vectorscope_analysis.cpp
    
    # Field mapping analysis
    # Re-enable range-based field mapping tools (observer-independent)
    analysis/disc_mapper/disc_mapper_analysis.cpp
    analysis/disc_mapper/disc_mapper_analyzer.cpp
    analysis/field_map_range/field_map_range_analysis.cpp
    
    # Field corruption analysis (testing tool)
    analysis/field_corruption/field_corruption_analyzer.cpp
    analysis/field_corruption/field_corruption_analysis.cpp
    
    # Dropout editor tool
    analysis/dropout/dropout_editor_tool.cpp
    
    # Source alignment analysis
    analysis/source_alignment/source_alignment_analysis.cpp
    
    # Mask line configuration
    analysis/mask_line/mask_line_analysis.cpp
    
    # FFmpeg preset configuration
    analysis/ffmpeg_preset/ffmpeg_preset_analysis.cpp
    
    # Core stage interfaces and factories only (implementations live in runtime plugins)
    stages/stage_factories.cpp

    # Dropout decision utilities
    dropout_decision.cpp
    
    # Observation cache (shared by all analysis decoders)
    observation_cache.cpp
    
    # Node type system
    node_type.cpp
    
    # Stage parameters
    stage_parameter.cpp

    # Stage plugin runtime loading
    stage_plugin_loader.cpp
    stage_plugin_registry.cpp
    plugin_remote_loader.cpp
    
    # DAG serialization
    dag_serialization.cpp
    
    # Project file I/O
    project.cpp
    
    # Project to DAG conversion
    stage_registry.cpp
    project_to_dag.cpp
)

# the scope needs to be PUBLIC so the unit test project can share these include directory rules
target_include_directories(orc-core PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}/include
    ${CMAKE_CURRENT_SOURCE_DIR}/stages
    ${CMAKE_CURRENT_SOURCE_DIR}/../view-types  # Access to view types (MVP architecture allows core -> view dependency)
    ${CMAKE_CURRENT_SOURCE_DIR}/observers
    ${CMAKE_CURRENT_SOURCE_DIR}/analysis
    ${EZPWD_INCLUDE_DIR}
)

# =============================================================================
# MVP Architecture - Core Headers are PRIVATE
# =============================================================================
# Core headers are marked PRIVATE to prevent transitive inclusion.
# Only orc-presenters should directly access core headers.
# GUI/CLI code accesses core functionality through presenters only.
# =============================================================================
# Note: All include directories above are PRIVATE by default
# =============================================================================

# Metadata I/O library (SQLite reader/writer; sub-library of orc-core)
add_subdirectory(metadata)

# Link against common types
target_link_libraries(orc-core PUBLIC orc-common)

# Link against metadata library (SQLite reader/writer)
# PUBLIC so that orc-presenters (which already uses TBCMetadataReader) continues
# to see tbc_metadata.h.
target_link_libraries(orc-core PUBLIC orc-metadata)

# Link fmt (used by EFM decoder pipeline sources compiled directly into orc-core)
target_link_libraries(orc-core PUBLIC fmt::fmt)

# Warning flags
# Note: -Wno-cpp suppresses #warning pragmas from system headers in Debug builds.
# On NixOS the gcc-wrapper unconditionally injects -D_FORTIFY_SOURCE=2 (hardening),
# but Debug builds use -O0, which causes glibc features.h to emit a #warning.
# Since this is a Nix environment issue and not a code quality problem, we silence
# it with -Wno-cpp (applies only to #warning/#pragma directives in system headers).
target_compile_options(orc-core PRIVATE
    $<$<CXX_COMPILER_ID:MSVC>:/W4 /permissive->
    $<$<NOT:$<CXX_COMPILER_ID:MSVC>>:-Wall -Wextra -Wpedantic>
    $<$<AND:$<CXX_COMPILER_ID:MSVC>,$<CONFIG:Debug>>:/Od /Zi>
    $<$<AND:$<CXX_COMPILER_ID:MSVC>,$<CONFIG:Release>>:/O2>
    $<$<AND:$<NOT:$<CXX_COMPILER_ID:MSVC>>,$<CONFIG:Debug>>:-g -O0 -Wno-cpp>
    $<$<AND:$<NOT:$<CXX_COMPILER_ID:MSVC>>,$<CONFIG:Release>>:-O3>
)

# Set compile-time spdlog filter level per build type.
# Release builds compile down to DEBUG level (info/warn/error remain available
# and debug output can be enabled at runtime via --log-level).  Debug/unset
# builds go all the way to TRACE so every severity is reachable at runtime.
target_compile_definitions(orc-core PRIVATE
    $<$<OR:$<CONFIG:Release>,$<CONFIG:RelWithDebInfo>,$<CONFIG:MinSizeRel>>:SPDLOG_ACTIVE_LEVEL=SPDLOG_LEVEL_DEBUG>
    $<$<NOT:$<OR:$<CONFIG:Release>,$<CONFIG:RelWithDebInfo>,$<CONFIG:MinSizeRel>>>:SPDLOG_ACTIVE_LEVEL=SPDLOG_LEVEL_TRACE>
    # MSVC does not define ssize_t (a POSIX type); define it as ptrdiff_t so
    # the ezpwd-reed-solomon headers (used by reedsolomon.cpp / rspc.cpp) compile
    # correctly on Windows.
    $<$<CXX_COMPILER_ID:MSVC>:ssize_t=ptrdiff_t>
    ORC_STAGE_PLUGIN_BUILD_DIR="${ORC_STAGE_PLUGIN_BUILD_DIR}"
)

set_target_properties(orc-core PROPERTIES
    WINDOWS_EXPORT_ALL_SYMBOLS ON
)

if(APPLE)
    set_target_properties(orc-core PROPERTIES
        MACOSX_RPATH ON
        INSTALL_NAME_DIR "@rpath"
    )
elseif(UNIX AND NOT WIN32)
    set_target_properties(orc-core PROPERTIES
        INSTALL_RPATH "\$ORIGIN"
    )
endif()

# Find and link SQLite3
find_package(SQLite3 REQUIRED)
target_link_libraries(orc-core PUBLIC SQLite::SQLite3)

# Find and link yaml-cpp
find_package(yaml-cpp REQUIRED)
# Create an alias if yaml-cpp::yaml-cpp doesn't exist (for compatibility)
if(TARGET yaml-cpp AND NOT TARGET yaml-cpp::yaml-cpp)
    add_library(yaml-cpp::yaml-cpp ALIAS yaml-cpp)
endif()
target_link_libraries(orc-core PUBLIC yaml-cpp::yaml-cpp)

# Find and link spdlog
find_package(spdlog REQUIRED)
target_link_libraries(orc-core PUBLIC spdlog::spdlog)

# Find and link curl (for downloading remote plugin binaries)
find_package(CURL REQUIRED)
target_link_libraries(orc-core PRIVATE CURL::libcurl)

if(WIN32)
    target_link_libraries(orc-core PRIVATE dbghelp)
endif()

# Find and link libpng
find_package(PNG REQUIRED)
target_link_libraries(orc-core PUBLIC PNG::PNG)

# Find and link FFmpeg libraries (for MP4 output)
find_package(PkgConfig REQUIRED)
pkg_check_modules(FFMPEG REQUIRED IMPORTED_TARGET
    libavcodec
    libavformat
    libavutil
    libswscale
)

# Create aggregate PkgConfig::FFMPEG target if it doesn't exist
# (pkg_check_modules may create individual targets like PkgConfig::libavcodec)
if(NOT TARGET PkgConfig::FFMPEG)
    add_library(PkgConfig::FFMPEG INTERFACE IMPORTED)
    set(_ffmpeg_pc_libs "")
    foreach(_ffmpeg_pc_target libavcodec libavformat libavutil libswscale)
        if(TARGET PkgConfig::${_ffmpeg_pc_target})
            list(APPEND _ffmpeg_pc_libs PkgConfig::${_ffmpeg_pc_target})
        endif()
    endforeach()

    if(_ffmpeg_pc_libs)
        set_target_properties(PkgConfig::FFMPEG PROPERTIES
            INTERFACE_LINK_LIBRARIES "${_ffmpeg_pc_libs}"
        )
    else()
        set_target_properties(PkgConfig::FFMPEG PROPERTIES
            INTERFACE_INCLUDE_DIRECTORIES "${FFMPEG_INCLUDE_DIRS}"
            INTERFACE_LINK_LIBRARIES "${FFMPEG_LIBRARIES}"
        )
        if(FFMPEG_LIBRARY_DIRS)
            set_property(TARGET PkgConfig::FFMPEG PROPERTY
                INTERFACE_LINK_DIRECTORIES "${FFMPEG_LIBRARY_DIRS}"
            )
        endif()
    endif()
    unset(_ffmpeg_pc_libs)
endif()

if(APPLE)
    install(TARGETS orc-core
        LIBRARY DESTINATION "orc-gui.app/Contents/Frameworks" COMPONENT Runtime
        RUNTIME DESTINATION "orc-gui.app/Contents/MacOS" COMPONENT Runtime
    )
elseif(WIN32)
    install(TARGETS orc-core
        RUNTIME DESTINATION bin COMPONENT Runtime
        LIBRARY DESTINATION lib COMPONENT Runtime
    )
else()
    install(TARGETS orc-core
        LIBRARY DESTINATION lib COMPONENT Runtime
        RUNTIME DESTINATION bin COMPONENT Runtime
    )
endif()

target_compile_definitions(orc-core PUBLIC HAVE_FFMPEG)
target_link_libraries(orc-core PUBLIC PkgConfig::FFMPEG)
